Fix overflow bug

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -238,7 +238,8 @@ textarea[type=text]:focus {
 }
 
 .textOverflow {
-  word-break: break-all;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .imagewrap {
@@ -282,6 +283,14 @@ textarea[type=text]:focus {
 
 .margin_between_containers {
   margin-top: 7%;
+}
+
+.galleryCard {
+  height: 65vw;
+}
+
+.editButton {
+  margin-top: 5%;
 }
 
 /*!
